--- a/SGTSP/nbproject/private/private.properties
+++ b/SGTSP/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Player\\AppData\\Roaming\\NetBeans\\7.2.1\\tomcat70.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 7.0.27
-j2ee.server.instance=tomcat70:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 7.0.27:base=apache-tomcat-7.0.27.0_base
-user.properties.file=C:\\Users\\Player\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
+deploy.ant.properties.file=/home/henrique/.netbeans/7.2.1/gfv3-1634079040.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=/home/henrique/glassfish-3.1.2.2/glassfish/domains/domain1
+j2ee.server.home=/home/henrique/glassfish-3.1.2.2/glassfish
+j2ee.server.instance=[/home/henrique/glassfish-3.1.2.2/glassfish:/home/henrique/glassfish-3.1.2.2/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/home/henrique/glassfish-3.1.2.2
+user.properties.file=/home/henrique/.netbeans/7.2.1/build.properties
