reorganização das classes entidades (beans)

--- a/SGTSP/src/java/hibernate.properties
+++ b/SGTSP/src/java/hibernate.properties
@@ -7,8 +7,8 @@ hibernate.connection.driver_class = com.mysql.jdbc.Driver
 hibernate.connection.url = jdbc:mysql://127.0.0.1/aluno
 
 
-hibernate.connection.username = aluno
-hibernate.connection.password = aluno
+hibernate.connection.username = root
+hibernate.connection.password = 99699939
 current_session_context_class = thread
 
 #hibernate.connection.password = ""
