--- a/SGTSP/nbproject/project.properties
+++ b/SGTSP/nbproject/project.properties
@@ -27,15 +27,19 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.jsoup-1.7.2.jar=jars\\jsoup-1.7.2.jar
+file.reference.jstl.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\jstl.jar
 file.reference.ldap.jar=jars\\ldap.jar
+file.reference.log4j.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\log4j.jar
 file.reference.saalib.jar=jars\\saalib.jar
 file.reference.shiro-core-1.1.0.jar=jars\\shiro-core-1.1.0.jar
+file.reference.standard.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\standard.jar
+file.reference.tomcat-6.0.16-tomcat-coyote.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\tomcat-6.0.16-tomcat-coyote.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.7.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -44,7 +48,11 @@ javac.classpath=\
     ${file.reference.saalib.jar}:\
     ${file.reference.shiro-core-1.1.0.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.hibernate-persistence.classpath}
+    ${libs.hibernate-persistence.classpath}:\
+    ${file.reference.jstl.jar}:\
+    ${file.reference.standard.jar}:\
+    ${file.reference.log4j.jar}:\
+    ${file.reference.tomcat-6.0.16-tomcat-coyote.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
