--- a/SGTSP/web/WEB-INF/web.xml
+++ b/SGTSP/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>Login</servlet-name>
         <servlet-class>br.edu.utfpr.cm.sgtsp.login.Login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProcessaHorario</servlet-name>
+        <servlet-class>br.edu.utfpr.cm.sgtsp.Servlets.ProcessaHorario</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProcessaHorario</servlet-name>
+        <url-pattern>/ProcessaHorario</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
