--- a/SGTSP/nbproject/project.properties
+++ b/SGTSP/nbproject/project.properties
@@ -28,6 +28,7 @@ endorsed.classpath=\
 excludes=
 file.reference.jsoup-1.7.2.jar=jars\\jsoup-1.7.2.jar
 file.reference.jstl.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\jstl.jar
+file.reference.jstl.jar-1=jars\\jstl.jar
 file.reference.ldap.jar=jars\\ldap.jar
 file.reference.log4j.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\log4j.jar
 file.reference.saalib.jar=jars\\saalib.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.jstl.jar}:\
     ${file.reference.standard.jar}:\
     ${file.reference.log4j.jar}:\
-    ${file.reference.tomcat-6.0.16-tomcat-coyote.jar}
+    ${file.reference.tomcat-6.0.16-tomcat-coyote.jar}:\
+    ${file.reference.jstl.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
