biblioteca standart jstl

--- a/SGTSP/nbproject/project.properties
+++ b/SGTSP/nbproject/project.properties
@@ -27,14 +27,12 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.jsoup-1.7.2.jar=jars\\jsoup-1.7.2.jar
-file.reference.jstl.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\jstl.jar
-file.reference.jstl.jar-1=jars\\jstl.jar
+file.reference.jstl.jar=jars/jstl.jar
 file.reference.ldap.jar=jars\\ldap.jar
-file.reference.log4j.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\log4j.jar
 file.reference.saalib.jar=jars\\saalib.jar
 file.reference.shiro-core-1.1.0.jar=jars\\shiro-core-1.1.0.jar
-file.reference.standard.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\standard.jar
-file.reference.tomcat-6.0.16-tomcat-coyote.jar=..\\..\\img_manager\\img_manager\\bibliotecas\\tomcat-6.0.16-tomcat-coyote.jar
+file.reference.standard.jar=jars/standard.jar
+file.reference.tomcat-6.0.16-tomcat-coyote.jar=jars\\tomcat-6.0.16-tomcat-coyote.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,11 +48,9 @@ javac.classpath=\
     ${file.reference.shiro-core-1.1.0.jar}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.hibernate-persistence.classpath}:\
-    ${file.reference.jstl.jar}:\
     ${file.reference.standard.jar}:\
-    ${file.reference.log4j.jar}:\
-    ${file.reference.tomcat-6.0.16-tomcat-coyote.jar}:\
-    ${file.reference.jstl.jar-1}
+    ${file.reference.jstl.jar}:\
+    ${file.reference.tomcat-6.0.16-tomcat-coyote.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
