Adicionado biblioteca log4

--- a/SGTSP/nbproject/project.properties
+++ b/SGTSP/nbproject/project.properties
@@ -29,6 +29,7 @@ excludes=
 file.reference.jsoup-1.7.2.jar=jars\\jsoup-1.7.2.jar
 file.reference.jstl.jar=jars/jstl.jar
 file.reference.ldap.jar=jars\\ldap.jar
+file.reference.log4j.jar=jars\\log4j.jar
 file.reference.saalib.jar=jars\\saalib.jar
 file.reference.shiro-core-1.1.0.jar=jars\\shiro-core-1.1.0.jar
 file.reference.standard.jar=jars/standard.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${libs.hibernate-persistence.classpath}:\
     ${file.reference.standard.jar}:\
     ${file.reference.jstl.jar}:\
-    ${file.reference.tomcat-6.0.16-tomcat-coyote.jar}
+    ${file.reference.tomcat-6.0.16-tomcat-coyote.jar}:\
+    ${file.reference.log4j.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
