--- a/SGTSP/nbproject/private/private.properties
+++ b/SGTSP/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Player\\AppData\\Roaming\\NetBeans\\7.2.1\\gfv3-2006462302.properties
+deploy.ant.properties.file=C:\\Users\\Player\\AppData\\Roaming\\NetBeans\\7.2.1\\tomcat70.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Player/personal_domain
-j2ee.server.home=C:/Program Files/glassfish-3.1.2.2/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-3.1.2.2\\glassfish;C:\\Users\\Player\\personal_domain]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.domain=C:/Users/Player/AppData/Roaming/NetBeans/7.2.1/apache-tomcat-7.0.27.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 7.0.27
+j2ee.server.instance=tomcat70:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 7.0.27:base=apache-tomcat-7.0.27.0_base
 j2ee.server.middleware=C:/Program Files/glassfish-3.1.2.2
 javac.debug=true
 javadoc.preview=true
