--- a/SGTSP/src/java/hibernate.properties
+++ b/SGTSP/src/java/hibernate.properties
@@ -8,7 +8,7 @@ hibernate.connection.url = jdbc:mysql://127.0.0.1/sgtsp
 
 
 hibernate.connection.username = root
-hibernate.connection.password = 99699939
+hibernate.connection.password = root
 current_session_context_class = thread
 
 #hibernate.connection.password = ""
